# sp-sub-preview

./: .flake8  README.md  pyproject.toml
server/: main.py
server/static/: index.html
server/sus2svg/: README.md  renderer.py  utils.py
server/sus2svg/assets/css/: sus.css
server/sus2svg/models/: __init__.py  directional.py  event.py  line.py  meta.py  note.py  score.py  slide.py  tap.py  word.py
