[tool.poetry]
name = "sp-sub-preview"
version = "0.1.0"
description = "sus chart preview server for sp-api-v3"
authors = ["Dosugamea <17107514+Dosugamea@users.noreply.github.com>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
python-multipart = "^0.0.5"
dataclasses-json = "^0.5.7"
svgwrite = "^1.4.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.971"
isort = "^5.10.1"

[tool.flake8]
max-line-length = 88

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
